--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,7 +3,9 @@
 /* css properties */
 :root {
 	--bkgd-color: 63, 55, 63;
+	--dark-bkgd-color: 44, 38, 44;
 	--text-color: 218, 218, 218;
+	--darker-text-color: 180, 180, 180;
 	--logo-color: 102, 228, 102;
 	--danger-color: 192, 90, 90;
 	--secondary-color: 215, 215, 127;
@@ -23,7 +25,16 @@ select {
 /* basics */
 body {
 	background-color: rgb(var(--bkgd-color));
+	color: rgb(var(--darker-text-color));
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
 	color: rgb(var(--text-color));
+	font-weight: bold;
 }
 
 h1 {
@@ -215,17 +226,12 @@ form .button {
 	width: 40px;
 	height: 40px;
 }
-.img-ctn {
-	width: 300px;
-	height: 300px;
-}
 
 img {
 	height: 100%;
 	width: 100%;
 	display: block;
 	object-fit: cover;
-	border-radius: 5px;
 }
 
 /* buttons and links */
@@ -300,6 +306,28 @@ a:focus {
 }
 
 /* override quill colors */
+.ql-container {
+	font-size: 16px !important;
+}
+.ql-toolbar.ql-snow,
+.ql-container.ql-snow {
+	border: 1px solid black !important;
+}
+
+.ql-toolbar.ql-snow {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
+.ql-container.ql-snow {
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+.ql-toolbar.ql-snow + .ql-container.ql-snow {
+	border-top: 0 !important;
+}
+
 .ql-picker-label {
 	color: rgb(var(--text-color));
 }
@@ -311,31 +339,11 @@ a:focus {
 /* bulma */
 .dropdown {
 	--bulma-dropdown-menu-min-width: 12rem;
-	--bulma-dropdown-content-background-color: var(--bulma-scheme-main);
-	--bulma-dropdown-content-offset: 0.25rem;
+	--bulma-dropdown-content-offset: 0.5rem;
 	--bulma-dropdown-content-padding-bottom: 0.5rem;
 	--bulma-dropdown-content-padding-top: 0.5rem;
-	--bulma-dropdown-content-radius: var(--bulma-radius);
-	--bulma-dropdown-content-shadow: var(--bulma-shadow);
 	--bulma-dropdown-content-z: 20;
-	--bulma-dropdown-item-h: var(--bulma-scheme-h);
-	--bulma-dropdown-item-s: var(--bulma-scheme-s);
-	--bulma-dropdown-item-l: var(--bulma-scheme-main-l);
-	--bulma-dropdown-item-background-l: var(--bulma-scheme-main-l);
 	--bulma-dropdown-item-background-l-delta: 0%;
-	--bulma-dropdown-item-hover-background-l-delta: var(
-		--bulma-hover-background-l-delta
-	);
-	--bulma-dropdown-item-active-background-l-delta: var(
-		--bulma-active-background-l-delta
-	);
-	--bulma-dropdown-item-color-l: var(--bulma-text-strong-l);
-	--bulma-dropdown-item-selected-h: var(--bulma-link-h);
-	--bulma-dropdown-item-selected-s: var(--bulma-link-s);
-	--bulma-dropdown-item-selected-l: var(--bulma-link-l);
-	--bulma-dropdown-item-selected-background-l: var(--bulma-link-l);
-	--bulma-dropdown-item-selected-color-l: var(--bulma-link-invert-l);
-	--bulma-dropdown-divider-background-color: var(--bulma-border-weak);
 }
 
 .dropdown {
@@ -369,9 +377,10 @@ a:focus {
 }
 
 .dropdown-content {
-	background-color: black;
+	background-color: rgb(var(--dark-bkgd-color));
+	border: 1px solid black;
 	border-radius: 5px;
-	padding: 0.5em 0.25em;
+	padding: 0.25em;
 }
 
 .dropdown-item {
