--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,128 +1,190 @@
 {% extends 'base.html' %}
 {% block header %}
-    {% block title %}Profile{% endblock %}
-{% endblock %}
-{% block content %}
-    <div class="flex w-full justify-end gap-4">
-        <!-- if this user profile is the current user's profile -->
-        {% if g.user['id'] == thisUser.id %}
-            <a class="button" href="{{ url_for('user.edit', id=thisUser.id) }}">Update Profile</a>
-            <!-- this is another user's profile -->
-        {% else %}
-            <!-- if logged in user is friends with this user -->
-            {% if friendship %}
-                <div class="flex flex-col">
-                    <div class="text-green-500">✓ Your Friend!</div>
-                    <button id="remove-friend" class="button is-danger">Unfriend</button>
-                </div>
-                <!-- if there is a request between logged in user and this user -->
-            {% elif request %}
-                {% if (request['user1_id'] == thisUser.id) %}
-                    <button id="add-friend" class="button is-secondary">Accept Friend Request</button>
-                {% elif (request['user1_id'] == g.user['id']) %}
-                    <div class="text-yellow-400">✓ Friendship Requested</div>
-                {% endif %}
+    {% block title %}
+        Profile {%
+        endblock %}
+    {% endblock %}
+    {% block content %}
+        <div class="flex w-full justify-end gap-4">
+            <!-- if this user profile is the current user's profile -->
+            {% if g.user['id'] == thisUser.id %}
+                <a class="button" href="{{ url_for('user.edit', id=thisUser.id) }}">Update Profile</a>
+                <!-- this is another user's profile -->
             {% else %}
-                <button id="add-friend" class="button">Add Friend</button>
+                <!-- if logged in user is friends with this user -->
+                {% if friendship %}
+                    <div class="flex gap-2 items-center">
+                        <div class="text-green-500">✓ Your Friend!</div>
+                        <div id="dropdown" class="dropdown is-right">
+                            <div class="dropdown-trigger pe-2">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">≡</button>
+                            </div>
+                            <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                                <div class="dropdown-content">
+                                    <button id="remove-friend" class="dropdown-item button is-danger">Unfriend</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- if there is a request between logged in user and this user -->
+                {% elif request %}
+                    {% if (request['user1_id'] == thisUser.id) %}
+                        <button id="add-friend" class="button is-secondary">Accept Friend Request</button>
+                        <button class="button is-danger remove-friend">Deny Friend Request</button>
+                    {% elif (request['user1_id'] == g.user['id']) %}
+                        <div class="text-yellow-400">✓ Friendship Requested</div>
+                    {% endif %}
+                {% else %}
+                    <button id="add-friend" class="button">Request Friendship</button>
+                {% endif %}
             {% endif %}
-        {% endif %}
-    </div>
-    <div class="flex flex-col gap-4">
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2">
-            <div class="flex flex-col gap-2">
-                <h2>{{ thisUser.username }}</h2>
-                {% if g.user['id'] == thisUser.id %}<div>privacy: {{ profile.visibility }}</div>{% endif %}
-                <div class="img-ctn">
+        </div>
+        <div class="flex flex-col gap-4">
+            <div class="grid gap-2 items-end justify-start">
+                <div class="h-[150px] w-[150px]">
                     {% if not profile['image_data'] %}
-                        <div class="bg-gray-700 w-full h-full grid place-items-center">
-                            <img height="400"
-                                 width="400"
+                        <div class="bg-gray-700 w-full h-full grid place-items-center rounded-full">
+                            <img height="200"
+                                 width="200"
                                  src="{{ url_for('static', filename='logo.svg') }}"
                                  alt="hookneedle logo because no image available" />
                         </div>
                     {% else %}
-                        <img height="400"
-                             width="400"
+                        <img class="rounded-full"
+                             height="200"
+                             width="200"
                              src="{{ profile['image_data'] }}"
                              alt="image of {{ thisUser.username }}" />
                     {% endif %}
                 </div>
+                <div>
+                    <h2>{{ thisUser.username }}</h2>
+                    <p>joined {{ thisUser['join_date'] }}</p>
+                    {% if g.user['id'] == thisUser.id %}<div>privacy: {{ profile.visibility }}</div>{% endif %}
+                </div>
             </div>
-            {% if g.user['id'] == thisUser.id or profile.visibility == 'public' %}
-                {% set showProjects = "true" %}
-            {% elif friendship and profile.visibility == 'friends' %}
-                {% set showProjects = "true" %}
-            {% endif %}
-            {% if showProjects == 'true' %}
-                {% if projects %}
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                <div class="border-t-2 border-[#2C262C] w-full py-4">
+                    <h3>Bio</h3>
+                    {% if profile.bio %}
+                        <p>{{ profile.bio }}</p>
+                    {% else %}
+                        <p>n/a</p>
+                    {% endif %}
+                </div>
+                {% if g.user['id'] == thisUser.id or profile.visibility == 'public' %}
+                    {% set showProjects = "true" %}
+                {% elif friendship and
+                    profile.visibility == 'friends' %}
+                    {% set showProjects = "true" %} {%
+                    endif %}
+                    {% if showProjects == 'true' %}
+                        {% if projects %}
+                            <div class="flex flex-col gap-2 border rounded-[5px] border-black p-4">
+                                <h3>Projects</h3>
+                                <ul class="flex flex-col gap-2">
+                                    {% for project in projects %}
+                                        <li class="bg-[#2C262C] rounded-[5px] flex justify-between items-center">
+                                            <a href="/project/{{ project['id'] }}"
+                                               class="flex items-center gap-4 p-2 w-full">
+                                                <div class="h-12 w-12">
+                                                    {% if project['image_data'] %}
+                                                        <img class="aspect-square"
+                                                             width="48px"
+                                                             height="48px"
+                                                             src="{{ project['image_data'] }}"
+                                                             alt="image representing the project called {{ project['name'] }}" />
+                                                    {% else %}
+                                                        <div class="bg-gray-700 child h-full">
+                                                            <img class="aspect-square"
+                                                                 width="48px"
+                                                                 height="48px"
+                                                                 src="{{ url_for('static', filename='logo.png') }}"
+                                                                 alt="hookneedle logo because no image available" />
+                                                        </div>
+                                                    {% endif %}
+                                                </div>
+                                                <h4 class="text-center">{{ project['name'] }}</h4>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        {% endif %}
+                    {% endif %}
+                </div>
+                {% if userFriends and showProjects == 'true' %}
                     <div class="flex flex-col gap-2">
-                        <h3>Projects</h3>
-                        <ul class="flex flex-col gap-2">
-                            {% for project in projects %}
-                                <li class="bg-[#2C262C] rounded-[5px] flex justify-between items-center">
-                                    <a href="/project/{{ project['id'] }}"
-                                       class="flex items-center gap-4 p-2 w-full">
+                        <h3>Friends</h3>
+                        <ul class="flex gap-4">
+                            {% for friend in userFriends %}
+                                <li>
+                                    <a class="link" href='/user/profile/{{ friend["friendId"] }}'>
                                         <div class="h-12 w-12">
-                                            {% if project['image_data'] %}
-                                                <img class="aspect-square"
-                                                     src="{{ project['image_data'] }}"
-                                                     alt="image representing the project called {{ project['name'] }}" />
+                                            {% if friend['img'] %}
+                                                <img class="aspect-square rounded-full"
+                                                     width="48px"
+                                                     height="48px"
+                                                     title="{{ friend['friendUsername'] }}"
+                                                     src="{{ friend['img'] }}"
+                                                     alt="image representing the user named {{ friend['friendUsername'] }}" />
                                             {% else %}
                                                 <div class="bg-gray-700 child h-full">
-                                                    <img class="aspect-square"
+                                                    <img class="aspect-square rounded-full"
+                                                         width="48px"
+                                                         height="48px"
                                                          src="{{ url_for('static', filename='logo.png') }}"
                                                          alt="hookneedle logo because no image available" />
                                                 </div>
                                             {% endif %}
                                         </div>
-                                        <h4 class="text-center">{{ project['name'] }}</h4>
                                     </a>
                                 </li>
                             {% endfor %}
                         </ul>
                     </div>
                 {% endif %}
-            {% endif %}
-        </div>
-        <div>
-            <h3>Bio</h3>
-            {% if profile.bio %}
-                <p>{{ profile.bio }}</p>
-            {% else %}
-                <p>n/a</p>
-            {% endif %}
-        </div>
-        {% if userFriends %}
-            <div>
-                <h3>Friends</h3>
-                <ul>
-                    {% for friend in userFriends %}
-                        <li>
-                            <a class="link" href='/user/profile/{{ friend["friendId"] }}'>{{ friend.friendUsername }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
             </div>
-        {% endif %}
-    </div>
-    <script>
-	document.addEventListener('DOMContentLoaded', () => {
-		friendId = '{{ thisUser.id }}';
+            <script>
+                document.addEventListener('DOMContentLoaded', () => {
+                    friendId = '{{ thisUser.id }}';
 
-		addFriendBtn = document.querySelector('#add-friend');
-        removeFriendBtn = document.querySelector('#remove-friend');
+                    addFriendBtn = document.querySelector('#add-friend');
+                    removeFriendBtn = document.querySelector('#remove-friend');
 
-		addFriendBtn?.addEventListener('click', () => {
-			fetch(`/user/addfriend/${friendId}`, {
-				method: 'POST',
-			}).then(()=> window.location.reload()).catch((error) => console.error('CAUGHT ERROR ON POST', error));
-		});
+                    addFriendBtn?.addEventListener('click', () => {
+                        fetch(`/user/addfriend/${friendId}`, {
+                                method: 'POST',
+                            })
+                            .then(() => window.location.reload())
+                            .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+                    });
 
-        removeFriendBtn?.addEventListener('click', () => {
-			fetch(`/user/removefriend/${friendId}`, {
-				method: 'POST',
-			}).then(()=> window.location.reload()).catch((error) => console.error('CAUGHT ERROR ON POST', error));
-		});
-	});
-    </script>
-{% endblock %}
+                    removeFriendBtn?.addEventListener('click', () => {
+                        fetch(`/user/removefriend/${friendId}`, {
+                                method: 'POST',
+                            })
+                            .then(() => window.location.reload())
+                            .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+                    });
+
+                    let dropdownTrigger = document.querySelectorAll('.dropdown-trigger')
+                    let dropdown = document.querySelectorAll('.dropdown')
+                    currentKey = null
+
+                    dropdown.forEach(dropdown => {
+                        dropdown.addEventListener('click', () => {
+                            currentKey = dropdown.dataset.key;
+                            dropdown.classList.add('is-active');
+                        })
+                    })
+
+                    document.addEventListener('click', async (e) => {
+                        let dropdown = document.querySelector(`#dropdown`)
+                        if (!e.target.closest(`#dropdown`)) {
+                            dropdown?.classList.remove('is-active');
+                        }
+                    });
+                });
+            </script>
+        {% endblock %}
